Fixed gap styling

--- a/wp-content/themes/intro-wp/resources/sass/components/_trips.scss
+++ b/wp-content/themes/intro-wp/resources/sass/components/_trips.scss
@@ -6,7 +6,7 @@
         grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
         grid-template-rows: auto;
         column-gap: 2%;
-        row-gap: 2em;
+        row-gap: 1em;
     }
 
     @media screen and (max-width: 900px) {
